# CResearch

./: .gitmodules  CMakeLists.txt  Cresearch.code-workspace  FactoryMethod.cpp  HelloWorld.cpp  README.md  StringArrays.c  Untitled.code-workspace  a.out  tags
.ccls-cache/@@mnt@c@Users@alexa@git@CResearch/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@endian.h.blob  @usr@include@errno.h.blob  @usr@include@features.h.blob  @usr@include@inttypes.h.blob  @usr@include@langinfo.h.blob  @usr@include@limits.h.blob  @usr@include@linux@errno.h.blob  @usr@include@linux@limits.h.blob  @usr@include@locale.h.blob  @usr@include@math.h.blob  @usr@include@nl_types.h.blob  @usr@include@setjmp.h.blob  @usr@include@signal.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@time.h.blob  @usr@include@unistd.h.blob  @usr@include@x86_64-linux-gnu@asm@errno.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@confname.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@environments.h.blob  @usr@include@x86_64-linux-gnu@bits@errno.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  (+100 more)
Arduino/: read_serial_digital.ino
BinaryParser/: Makefile  main.c
CustomHeadders/: colors.h  curdbg.h  dbg.h  debug.h  kerndebug.h
Learning/: Forloops.c  HelloWorld.c  Memaloc.c  README.md  StringArrays.c  Structs.c
Learning/C++/: CMakeLists.txt  conanfile.txt
Learning/C++/Boost/Asio/: CMakeLists.txt
Learning/C++/CodeClinic/Ex_Files_Code_Clinic_C/Exercise Files/Ch01/Problem 1/: problem1.c
Learning/C++/CodeClinic/Ex_Files_Code_Clinic_C/Exercise Files/Ch01/Rewrite/: problem.c
Learning/C++/CodeClinic/Ex_Files_Code_Clinic_C/Exercise Files/Ch03/Problem 3/: nqueens1.c  nqueens2.c
Learning/C++/CodeClinic/Ex_Files_Code_Clinic_C/Exercise Files/Ch04/Problem 4/: sine.c
Learning/C++/CodeClinic/Ex_Files_Code_Clinic_C/Exercise Files/Ch05/Problem 5/: do_jpeg.c  findfaces.h  makefile
Learning/C++/CodeClinic/Ex_Files_Code_Clinic_C/Exercise Files/Ch06/Problem 6/: web_dashboard-ncurses.c
Learning/C++/MapFilterReduce/src/: main.cpp
Learning/C++/Tempaltes-STL/src/: main.cpp
Learning/C++/Threadding/src/: main.cpp
Learning/C++/Transforms/src/: main.cpp
Learning/C++/basics/Overloading/: CMakeLists.txt
Learning/C++/basics/Overloading/src/: main.cpp
Learning/C++/basics/classes/: bank
Learning/C++/basics/classes/src/: main.cpp
Learning/C++/basics/forrange/: CMakeLists.txt
Learning/C++/basics/forrange/src/: main.cpp
Learning/C++/basics/io/: io  makefile
Learning/C++/basics/io/src/: files.cpp
Learning/C++/basics/re/: compile_flags.txt  makefile  re
Learning/C++/basics/re/src/: main.cpp
Learning/C++/basics/stdint/: CMakeLists.txt
Learning/C++/basics/stdint/src/: main.cpp
Learning/C++/sockets/: makefile
Learning/C++/sockets/src/: main.cpp
Learning/C/Advanced/CURL/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  basiccurl  basiccurl.cbp  cmake_install.cmake
Learning/C/Advanced/CURL/src/: main.c
Learning/C/Advanced/Sockets/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  reverse_tcp_client.cbp
Learning/C/Advanced/Sockets/src/: client.c  colors.h  curdbg.h  menu.h  server.c  win.h
Spectre&MEltdown/: Spectre.c  Spectre.cpp  spectre.c
SpectreAndMeltdown/: Spectre.c
lib/: README.md
lib/errors/: CMakeLists.txt  conanfile.txt  tags
lib/errors/src/: errors.h  main.cpp
lib/lcthw/: makefile  (+3 more)
(+2151 files in other folders)
